@@ -29,6 +29,9 @@ Changes
   Python code using multithreading without fetching the context
   (see issue #965).
 
+- A warning is now issued when trying to convert a `DataFrame` with
+  duplicate indexes (issue #811).
+
 
 Release 3.5.6
 =============
